Add RSS feed generation

--- a/templates/report_template.html
+++ b/templates/report_template.html
@@ -123,6 +123,7 @@
 
         <div class="footer">
             <p>WSB Reporter • Updated on {{DATE_FULL}}</p>
+            <p><a href="rss.xml">Subscribe via RSS</a></p>
         </div>
     </div>
 </body>
