style: Merge footer date and RSS link into a single paragraph with a line break.

--- a/templates/report_template.html
+++ b/templates/report_template.html
@@ -122,8 +122,9 @@
         </div>
 
         <div class="footer">
-            <p>WSB Reporter • Updated on {{DATE_FULL}}</p>
-            <p><a href="rss.xml">Subscribe via RSS</a></p>
+            <p>WSB Reporter • Updated on {{DATE_FULL}} <br>
+                <a href="rss.xml">Subscribe via RSS</a>
+            </p>
         </div>
     </div>
 </body>
