--- a/templates/report_template.html
+++ b/templates/report_template.html
@@ -122,8 +122,9 @@
         </div>
 
         <div class="footer">
-            <p>WSB Reporter • Updated on {{DATE_FULL}} <br>
-                <a href="rss.xml">Subscribe via RSS</a>
+            <p style="text-align: center;">WSB Reporter • Updated on {{DATE_FULL}} <br>
+                <a href="rss.xml">Subscribe via RSS</a> • <a
+                    href="https://follow.it/hindsight-capital-management">Subscribe via follow.it</a>
             </p>
         </div>
     </div>
